paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.compile.log
error[E0308]: mismatched types
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:7:11
  |
7 |         [[[1, 0], [0, 0], [0, 0]],
  |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:8:11
  |
8 |          [[0, 0], [0, 0], [0, 0]],
  |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:9:11
  |
9 |          [[0, 0], [0, 0], [0, 0]]],
  |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:10:11
   |
10 |         [[[2, 3], [0, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:11:11
   |
11 |          [[0, 0], [0, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:12:11
   |
12 |          [[0, 0], [0, 0], [0, 0]]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:13:11
   |
13 |         [[[4, 5], [6, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:14:11
   |
14 |          [[0, 0], [0, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:15:11
   |
15 |          [[0, 0], [0, 0], [0, 0]]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:16:11
   |
16 |         [[[0, 0], [0, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:17:11
   |
17 |          [[0, 0], [0, 0], [0, 0]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/initialization_6/sample_005/target.rs:18:11
   |
18 |          [[0, 0], [0, 0], [0, 0]]],
   |           ^^^^^^ expected `i16`, found `[{integer}; 2]`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0308`.